# code_reviewer

./: .env-example  README.md  pyproject.toml
src/code_reviewer/: crew.py  main.py
src/code_reviewer/config/: agents.yaml  tasks.yaml
